feat: issue expiring credits from payment and reward sources
